# ChangeLog for media-libs/x264
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/x264/ChangeLog,v 1.33 2010/01/31 17:30:38 armin76 Exp $

  31 Jan 2010; Raúl Porcel <armin76@gentoo.org> x264-0.0.20091021.ebuild:
  sparc stable wrt #297845

  24 Jan 2010; Tobias Klausmann <klausman@gentoo.org>
  x264-0.0.20091021.ebuild:
  Stable on alpha, bug #297845

*x264-0.0.20100118 (19 Jan 2010)

  19 Jan 2010; Alexis Ballier <aballier@gentoo.org>
  +x264-0.0.20100118.ebuild:
  new snapshot

  09 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  x264-0.0.20091021.ebuild:
  stable x86, bug 297845

  07 Jan 2010; Brent Baude <ranger@gentoo.org> x264-0.0.20091021.ebuild:
  Marking x264-0.0.20091021 ppc for bug 297845

  06 Jan 2010; Brent Baude <ranger@gentoo.org> x264-0.0.20091021.ebuild:
  Marking x264-0.0.20091021 ppc64 for bug 297845

  22 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  x264-0.0.20091021.ebuild:
  amd64 stable wrt #297845

*x264-0.0.20091124 (26 Nov 2009)

  26 Nov 2009; Steve Dibb <beandog@gentoo.org> +x264-0.0.20091124.ebuild:
  Snapshot bump

*x264-0.0.20091021 (22 Oct 2009)

  22 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  +x264-0.0.20091021.ebuild:
  Version bump.

*x264-0.0.20090923 (23 Sep 2009)

  23 Sep 2009; Alexis Ballier <aballier@gentoo.org>
  +x264-0.0.20090923.ebuild:
  new snapshot

*x264-0.0.20090908 (09 Sep 2009)

  09 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
  +x264-0.0.20090908.ebuild:
  Version bump.

*x264-0.0.20090629 (29 Jun 2009)

  29 Jun 2009; Alexis Ballier <aballier@gentoo.org>
  +x264-0.0.20090629.ebuild:
  bump a new snapshot

  29 Jun 2009; Alexis Ballier <aballier@gentoo.org>
  -files/x264-onlylib.patch, -x264-0.0.20070924.ebuild,
  -x264-0.0.20080301.ebuild, -x264-0.0.20080406.ebuild,
  -x264-0.0.20080819.ebuild, -x264-0.0.20081218.ebuild:
  remove old

*x264-0.0.20090502 (03 May 2009)

  03 May 2009; Alexis Ballier <aballier@gentoo.org>