@@ -1,0 +1,78 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/x264/x264-0.0.20100423.ebuild,v 1.1 2010/04/24 15:46:48 aballier Exp $
+
+EAPI=2
+inherit eutils multilib toolchain-funcs versionator
+
+MY_P=x264-snapshot-$(get_version_component_range 3)-2245
+
+DESCRIPTION="A free library for encoding X264/AVC streams"
+HOMEPAGE="http://www.videolan.org/developers/x264.html"
+SRC_URI="ftp://ftp.videolan.org/pub/videolan/x264/snapshots/${MY_P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
+IUSE="debug +threads pic"
+
+RDEPEND=""
+DEPEND="amd64? ( >=dev-lang/yasm-0.6.2 )
+	x86? ( >=dev-lang/yasm-0.6.2 )
+	x86-fbsd? ( >=dev-lang/yasm-0.6.2 )
+	x86-macos? ( >=dev-lang/yasm-0.6.2 )
+	x86-solaris? ( >=dev-lang/yasm-0.6.2 )
+	x64-solaris? ( >=dev-lang/yasm-0.6.2 )"
+
+S=${WORKDIR}/${MY_P}
+
+src_prepare() {
+	epatch "${FILESDIR}"/${PN}-nostrip.patch \
+		"${FILESDIR}"/${PN}-onlylib-20090408.patch
+
+	# Solaris' /bin/sh doesn't grok the syntax in these files
+	sed -i -e '1c\#!/usr/bin/env sh' configure version.sh || die
+	# for sparc-solaris
+	if [[ ${CHOST} == sparc*-solaris* ]] ; then
+		sed -i -e 's:-DPIC::g' configure || die
+	fi
+	# for OSX
+	sed -i -e "s|-arch x86_64||g" configure || die
+}
+
+src_configure() {
+	tc-export CC
+
+	local myconf=""
+	use debug && myconf="${myconf} --enable-debug"
+
+	if use x86 && use pic; then
+		myconf="${myconf} --disable-asm"
+	fi
+
+	./configure \
+		--prefix="${EPREFIX}"/usr \
+		--libdir="${EPREFIX}"/usr/$(get_libdir) \
+		--disable-avs-input \
+		--disable-lavf-input \
+		$(use_enable threads pthread) \
+		--enable-pic \
+		--enable-shared \
+		--extra-asflags="${ASFLAGS}" \
+		--extra-cflags="${CFLAGS}" \
+		--extra-ldflags="${LDFLAGS}" \
+		--host="${CHOST}" \
+		${myconf} \
+		|| die
+}
+
+src_install() {
+	emake DESTDIR="${D}" install || die
+	dodoc AUTHORS doc/*.txt
+}
+
+pkg_postinst() {
+	elog "Please note that this package now only installs"
+	elog "${PN} libraries. In order to have the encoder,"
+	elog "please emerge media-video/x264-encoder."
+}
